--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de Muebles</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Tienda de Muebles</h1>
+    </header>
+
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="tienda.html">Tienda</a>
+        <a href="blog.html">Blog</a>
+        <a href="galeria.html">Galeria</a>
+        <a href="contacto.html">Contacto</a>
+    </nav>
+
+    <section>
+        <h2>Categoria de Productos</h2>
+        <div>
+            <img src="Img/categoria1.jpg" alt="">
+            <a href="#">Oficina</a>
+        </div>
+
+        <div>
+            <img src="Img/categoria2.jpg" alt="">
+            <a href="#">Oficina</a>
+        </div>
+
+        <div>
+            <img src="Img/categoria3.jpg" alt="">
+            <a href="#">Oficina</a>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h2>Sobre nosotros</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Quibusdam aut harum delectus fugiat nemo aliquid veniam quod expedita eius maiores!</p>
+        </div>
+    </section>
+
+    <main>
+        <h2>Nuestros Productos</h2>
+     
+        <div>
+             <div>
+                <img src="Img/producto1.jpg" alt="Imagen Producto">
+                <div>
+                    <h3>Producto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorem quibusdam accusantium incidunt minima sed officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+   <footer>
+    <p>Todos los derechos Reservador, TiendaMuebles</p>
+   </footer>
 </body>
-</html>
+
+</html> 
