seccion nuestros productos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- esto es un comentario -->
     <header>
         <h1>Tienda de Muebles</h1>
     </header>
@@ -53,17 +54,94 @@
         <div>
              <div>
                 <img src="Img/producto1.jpg" alt="Imagen Producto">
+
                 <div>
                     <h3>Producto 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorem quibusdam accusantium incidunt minima sed officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
-                </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Impedit dolorem quibusdam accusantium incidunt minima sed 
+                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
+                    <p>$ 10000</p>
+
+                    <a href="#">Agregar al Carrito</a>
+                </div>  
             </div>
+
+            <div>
+                <img src="Img/producto2.jpg" alt="Imagen Producto">
+
+                <div>
+                    <h3>Producto 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Impedit dolorem quibusdam accusantium incidunt minima sed 
+                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
+                    <p>$ 10000</p>
+
+                    <a href="#">Agregar al Carrito</a>
+                </div>  
+            </div>
+
+            <div>
+                <img src="Img/producto3.jpg" alt="Imagen Producto">
+
+                <div>
+                    <h3>Producto 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Impedit dolorem quibusdam accusantium incidunt minima sed 
+                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
+                    <p>$ 10000</p>
+
+                    <a href="#">Agregar al Carrito</a>
+                </div>  
+            </div>
+
+            <div>
+                <img src="Img/producto4.jpg" alt="Imagen Producto">
+
+                <div>
+                    <h3>Producto 4</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Impedit dolorem quibusdam accusantium incidunt minima sed 
+                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
+                    <p>$ 10000</p>
+
+                    <a href="#">Agregar al Carrito</a>
+                </div>  
+            </div>
+
+            <div>
+                <img src="Img/producto5.jpg" alt="Imagen Producto">
+
+                <div>
+                    <h3>Producto 5</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Impedit dolorem quibusdam accusantium incidunt minima sed 
+                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
+                    <p>$ 10000</p>
+
+                    <a href="#">Agregar al Carrito</a>
+                </div>  
+            </div>
+
+            <div>
+                <img src="Img/producto6.jpg" alt="Imagen Producto">
+
+                <div>
+                    <h3>Producto 6</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Impedit dolorem quibusdam accusantium incidunt minima sed 
+                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
+                    <p>$ 10000</p>
+
+                    <a href="#">Agregar al Carrito</a>
+                </div>  
+            </div>
+
         </div>
     </main>
 
    <footer>
     <p>Todos los derechos Reservador, TiendaMuebles</p>
-   </footer>
-</body>
+   </footer> 
+</body> 
 
 </html> 
