--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Muebles</title>
+    <title>Ecommerce - Home</title>
+   <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
     <!-- esto es un comentario -->
     <header>
-        <h1>Tienda de Muebles</h1>
+        <h1 class="nombre-sitio">Tienda <span>Muebles</span> </h1>
     </header>
 
-    <nav>
-        <a href="index.html">Inicio</a>
-        <a href="nosotros.html">Nosotros</a>
-        <a href="tienda.html">Tienda</a>
-        <a href="blog.html">Blog</a>
-        <a href="galeria.html">Galeria</a>
-        <a href="contacto.html">Contacto</a>
-    </nav>
 
+    <div class="contenedor-navegacion">
+        <nav class="nav-principal contenedor">
+            <a href="index.html">Inicio</a>
+            <a href="nosotros.html">Nosotros</a>
+            <a href="tienda.html">Tienda</a>
+            <a href="blog.html">Blog</a>
+            <a href="galeria.html">Galeria</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+    </div>
+    
+
+    <div class="hero"></div>
     <section>
         <h2>Categoria de Productos</h2>
         <div>
@@ -140,6 +147,36 @@
     </main>
 
    <footer>
+    <div>
+        <h3>Categorias</h3>
+        <nav>
+            <a href="">Cocina</a>
+            <a href="">Oficina</a>
+            <a href="">Jardin</a>
+            <a href="">Cochera</a>
+            <a href="">Dormitorios</a>
+        </nav>
+    </div>
+
+    <div>
+        <h3>Sobre Nosotros</h3>
+        <nav>
+            <a href="">Nuestra Historia</a>
+            <a href="">Mision, Vision y Valores</a>
+            <a href="">Carreras</a>
+            <a href="">Politica de Privacidad</a>
+            <a href="">Termino de Servicio</a>
+        </nav>
+    </div>
+    <div>
+        <h3>Soporte</h3>
+        <nav>
+            <a href="">Preguntas Frecuentes</a>
+            <a href="">Ayuda en Linea</a>
+            <a href="">Confianza y Seguridad</a>
+        </nav>
+    </div>
+
     <p>Todos los derechos Reservador, TiendaMuebles</p>
    </footer> 
 </body> 
