--- a/index.html
+++ b/index.html
@@ -1,184 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce - Home</title>
-   <link rel="stylesheet" href="CSS/normalize.css">
-    <link rel="stylesheet" href="CSS/styles.css">
-</head>
+    <link rel="stylesheet" href="CSS/normalize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="CSS/styles.css" />
+  </head>
 
-<body>
+  <body>
     <!-- esto es un comentario -->
     <header>
-        <h1 class="nombre-sitio">Tienda <span>Muebles</span> </h1>
+      <h1 class="nombre-sitio">Tienda <span>Muebles</span></h1>
     </header>
 
-
     <div class="contenedor-navegacion">
-        <nav class="nav-principal contenedor">
-            <a href="index.html">Inicio</a>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="tienda.html">Tienda</a>
-            <a href="blog.html">Blog</a>
-            <a href="galeria.html">Galeria</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
+      <nav class="nav-principal contenedor">
+        <a href="index.html">Inicio</a>
+        <a href="nosotros.html">Nosotros</a>
+        <a href="tienda.html">Tienda</a>
+        <a href="blog.html">Blog</a>
+        <a href="galeria.html">Galeria</a>
+        <a href="contacto.html">Contacto</a>
+      </nav>
     </div>
-    
 
     <div class="hero"></div>
-    <section>
-        <h2>Categoria de Productos</h2>
-        <div>
-            <img src="Img/categoria1.jpg" alt="">
-            <a href="#">Oficina</a>
+
+    <section class="contenedor categorias">
+      <h2 class="text-center">Categoria de Productos</h2>
+
+      <div class="lista-categorias">
+        <div class="categoria">
+          <img src="Img/categoria1.jpg" alt="" />
+          <a href="#">Oficina</a>
         </div>
 
-        <div>
-            <img src="Img/categoria2.jpg" alt="">
-            <a href="#">Oficina</a>
+        <div class="categoria">
+          <img src="Img/categoria2.jpg" alt="" />
+          <a href="#">Hogar</a>
         </div>
 
-        <div>
-            <img src="Img/categoria3.jpg" alt="">
-            <a href="#">Oficina</a>
+        <div class="categoria">
+          <img src="Img/categoria3.jpg" alt="" />
+          <a href="#">Cocina</a>
         </div>
+      </div>
     </section>
 
-    <section>
-        <div>
-            <h2>Sobre nosotros</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Quibusdam aut harum delectus fugiat nemo aliquid veniam quod expedita eius maiores!</p>
+    <section class="sobre-nosotros">
+      <div class="contenedor sobre-nosotros-grid">
+        <div class="texto-nosotros">
+          <h2>Sobre nosotros</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+            aut harum delectus fugiat nemo aliquid veniam quod expedita eius
+            maiores! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Natus odio consectetur illum cumque magni, repellat ullam minus?
+            Amet molestiae alias doloribus ipsum quae. Quasi dolores architecto
+            quae minus ipsam quo.
+          </p>
         </div>
+      </div>
     </section>
 
-    <main>
-        <h2>Nuestros Productos</h2>
-     
-        <div>
-             <div>
-                <img src="Img/producto1.jpg" alt="Imagen Producto">
+    <main class="contenido-principal contenedor">
+      <h2 class="text-center">Nuestros Productos</h2>
 
-                <div>
-                    <h3>Producto 1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Impedit dolorem quibusdam accusantium incidunt minima sed 
-                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
-                    <p>$ 10000</p>
+      <div class="listado-productos">
+        <div class="producto">
+          <img src="Img/producto1.jpg" alt="Imagen Producto" />
 
-                    <a href="#">Agregar al Carrito</a>
-                </div>  
-            </div>
+          <div class="texto-producto">
+            <h3>Producto 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              dolorem quibusdam accusantium incidunt minima sed officia iure
+              delectus deleniti. Minus fugit eius dolores quod, nihil iste quis
+              doloremque dolorum impedit.
+            </p>
+            <p class="precio">$ 10000</p>
 
-            <div>
-                <img src="Img/producto2.jpg" alt="Imagen Producto">
-
-                <div>
-                    <h3>Producto 2</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Impedit dolorem quibusdam accusantium incidunt minima sed 
-                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
-                    <p>$ 10000</p>
-
-                    <a href="#">Agregar al Carrito</a>
-                </div>  
-            </div>
-
-            <div>
-                <img src="Img/producto3.jpg" alt="Imagen Producto">
-
-                <div>
-                    <h3>Producto 3</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Impedit dolorem quibusdam accusantium incidunt minima sed 
-                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
-                    <p>$ 10000</p>
-
-                    <a href="#">Agregar al Carrito</a>
-                </div>  
-            </div>
-
-            <div>
-                <img src="Img/producto4.jpg" alt="Imagen Producto">
-
-                <div>
-                    <h3>Producto 4</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Impedit dolorem quibusdam accusantium incidunt minima sed 
-                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
-                    <p>$ 10000</p>
-
-                    <a href="#">Agregar al Carrito</a>
-                </div>  
-            </div>
-
-            <div>
-                <img src="Img/producto5.jpg" alt="Imagen Producto">
-
-                <div>
-                    <h3>Producto 5</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Impedit dolorem quibusdam accusantium incidunt minima sed 
-                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
-                    <p>$ 10000</p>
-
-                    <a href="#">Agregar al Carrito</a>
-                </div>  
-            </div>
-
-            <div>
-                <img src="Img/producto6.jpg" alt="Imagen Producto">
-
-                <div>
-                    <h3>Producto 6</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Impedit dolorem quibusdam accusantium incidunt minima sed 
-                        officia iure delectus deleniti. Minus fugit eius dolores quod, nihil iste quis doloremque dolorum impedit.</p>
-                    <p>$ 10000</p>
-
-                    <a href="#">Agregar al Carrito</a>
-                </div>  
-            </div>
-
+            <a class="btn" href="#">Agregar al Carrito</a>
+          </div>
         </div>
+
+        <div class="producto">
+          <img src="Img/producto2.jpg" alt="Imagen Producto" />
+
+          <div class="texto-producto">
+            <h3>Producto 2</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              dolorem quibusdam accusantium incidunt minima sed officia iure
+              delectus deleniti. Minus fugit eius dolores quod, nihil iste quis
+              doloremque dolorum impedit.
+            </p>
+            <p class="precio">$ 10000</p>
+
+            <a class="btn" href="#">Agregar al Carrito</a>
+          </div>
+        </div>
+
+        <div class="producto">
+          <img src="Img/producto3.jpg" alt="Imagen Producto" />
+
+          <div class="texto-producto">
+            <h3>Producto 3</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              dolorem quibusdam accusantium incidunt minima sed officia iure
+              delectus deleniti. Minus fugit eius dolores quod, nihil iste quis
+              doloremque dolorum impedit.
+            </p>
+            <p>$ 10000</p>
+
+            <a class="btn" href="#">Agregar al Carrito</a>
+          </div>
+        </div>
+
+        <div class="producto">
+          <img src="Img/producto4.jpg" alt="Imagen Producto" />
+
+          <div class="texto-producto">
+            <h3>Producto 4</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              dolorem quibusdam accusantium incidunt minima sed officia iure
+              delectus deleniti. Minus fugit eius dolores quod, nihil iste quis
+              doloremque dolorum impedit.
+            </p>
+            <p class="precio">$ 10000</p>
+
+            <a class="btn" href="#">Agregar al Carrito</a>
+          </div>
+        </div>
+
+        <div class="producto">
+          <img src="Img/producto5.jpg" alt="Imagen Producto" />
+
+          <div class="texto-producto">
+            <h3>Producto 5</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              dolorem quibusdam accusantium incidunt minima sed officia iure
+              delectus deleniti. Minus fugit eius dolores quod, nihil iste quis
+              doloremque dolorum impedit.
+            </p>
+            <p class="precio">$ 10000</p>
+
+            <a class="btn" href="#">Agregar al Carrito</a>
+          </div>
+        </div>
+
+        <div class="producto">
+          <img src="Img/producto6.jpg" alt="Imagen Producto" />
+
+          <div class="texto-producto">
+            <h3>Producto 6</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              dolorem quibusdam accusantium incidunt minima sed officia iure
+              delectus deleniti. Minus fugit eius dolores quod, nihil iste quis
+              doloremque dolorum impedit.
+            </p>
+            <p class="precio">$ 10000</p>
+
+            <a class="btn" href="#">Agregar al Carrito</a>
+          </div>
+        </div>
+      </div>
     </main>
 
-   <footer>
-    <div>
-        <h3>Categorias</h3>
-        <nav>
+    <footer class="site-footer">
+      <div class="grid-footer contenedor">
+        <div>
+          <h3>Categorias</h3>
+
+          <nav class="footer-menu">
             <a href="">Cocina</a>
             <a href="">Oficina</a>
             <a href="">Jardin</a>
             <a href="">Cochera</a>
             <a href="">Dormitorios</a>
-        </nav>
-    </div>
+          </nav>
+        </div>
 
-    <div>
-        <h3>Sobre Nosotros</h3>
-        <nav>
+        <div>
+          <h3>Sobre Nosotros</h3>
+          <nav class="footer-menu">
             <a href="">Nuestra Historia</a>
             <a href="">Mision, Vision y Valores</a>
             <a href="">Carreras</a>
             <a href="">Politica de Privacidad</a>
             <a href="">Termino de Servicio</a>
-        </nav>
-    </div>
-    <div>
-        <h3>Soporte</h3>
-        <nav>
+          </nav>
+        </div>
+        <div>
+          <h3>Soporte</h3>
+          <nav class="footer-menu">
             <a href="">Preguntas Frecuentes</a>
             <a href="">Ayuda en Linea</a>
             <a href="">Confianza y Seguridad</a>
-        </nav>
-    </div>
+          </nav>
+        </div>
+      </div>
 
-    <p>Todos los derechos Reservador, TiendaMuebles</p>
-   </footer> 
-</body> 
-
-</html> 
+      <p class="copyright">Todos los derechos Reservados, TiendaMuebles</p>
+    </footer>
+  </body>
+</html>
