Proyecto Terminado Sin Responsive Desgin

--- a/base.html
+++ b/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ecommerce - Nosotros</title>
+    <title>Ecommerce - Home</title>
     <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,37 +23,22 @@
     <div class="contenedor-navegacion">
       <nav class="nav-principal contenedor">
         <a href="index.html">Inicio</a>
-        <a class="active" href="nosotros.html">Nosotros</a>
+        <a href="nosotros.html">Nosotros</a>
         <a href="tienda.html">Tienda</a>
         <a href="blog.html">Blog</a>
         <a href="galeria.html">Galeria</a>
         <a href="contacto.html">Contacto</a>
       </nav>
     </div>
-    >
+>
+
+  
+
+ 
 
     <main class="contenido-principal contenedor">
-      <h2 class="text-center">Sobre Nosotros</h2>
-
-      <div class="contenido-nosotros">
-        <div class="imagen">
-          <img src="Img/nosotros.jpg" alt="imagen nosotros" />
-        </div>
-        <div class="informacion-nosotros">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
-            fuga quas ea laboriosam delectus expedita repellendus vitae minus
-            amet nostrum corporis id labore modi tenetur fugit architecto eum
-            repellat ad.
-          </p>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad eos
-            obcaecati culpa. Nostrum quos eveniet aut voluptate natus a.
-            Voluptates consequatur, omnis reiciendis in distinctio consequuntur
-            delectus aperiam error nesciunt.
-          </p>
-        </div>
-      </div>
+      <h2 class="text-center">Nombre Pagina</h2>
+     
     </main>
 
     <footer class="site-footer">
