--- a/entrada.html
+++ b/entrada.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ecommerce - Nosotros</title>
+    <title>Ecommerce - Entrada Blog</title>
     <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,37 +23,68 @@
     <div class="contenedor-navegacion">
       <nav class="nav-principal contenedor">
         <a href="index.html">Inicio</a>
-        <a class="active" href="nosotros.html">Nosotros</a>
+        <a href="nosotros.html">Nosotros</a>
         <a href="tienda.html">Tienda</a>
         <a href="blog.html">Blog</a>
         <a href="galeria.html">Galeria</a>
         <a href="contacto.html">Contacto</a>
       </nav>
     </div>
-    >
+>
+
+  
+
+ 
 
     <main class="contenido-principal contenedor">
-      <h2 class="text-center">Sobre Nosotros</h2>
+      <h2 class="text-center">Entrada Blog</h2>
+      <article class="entrada contenido-entrada-blog">
+        <header>
+          <h2>Guia de colores</h2>
+        </header>
+        <div class="image">
+          <img src="Img/nosotros.jpg" alt="imagen blog" />
+        </div>
+        <div class="entrada-meta">
+          <p>Fecha: <span>22 de Octubre de 2023</span></p>
+          <p>Escrito por : <span>luis celi</span></p>
+        </div>
 
-      <div class="contenido-nosotros">
-        <div class="imagen">
-          <img src="Img/nosotros.jpg" alt="imagen nosotros" />
-        </div>
-        <div class="informacion-nosotros">
+        <div class="entrada-blog">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
-            fuga quas ea laboriosam delectus expedita repellendus vitae minus
-            amet nostrum corporis id labore modi tenetur fugit architecto eum
-            repellat ad.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Possimus debitis deleniti laudantium maxime similique labore
+            inventore sapiente animi magni error, temporibus ex nemo minus
+            quos, rem blanditiis molestiae suscipit incidunt.
           </p>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad eos
-            obcaecati culpa. Nostrum quos eveniet aut voluptate natus a.
-            Voluptates consequatur, omnis reiciendis in distinctio consequuntur
-            delectus aperiam error nesciunt.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+            veritatis perspiciatis eligendi, quisquam reprehenderit quis,
+            mollitia nisi labore aliquid saepe animi expedita reiciendis
+            numquam natus delectus pariatur cum atque? Labore?
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+            veritatis perspiciatis eligendi, quisquam reprehenderit quis,
+            mollitia nisi labore aliquid saepe animi expedita reiciendis
+            numquam natus delectus pariatur cum atque? Labore?
+          </p>
+
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+            veritatis perspiciatis eligendi, quisquam reprehenderit quis,
+            mollitia nisi labore aliquid saepe animi expedita reiciendis
+            numquam natus delectus pariatur cum atque? Labore?
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+            veritatis perspiciatis eligendi, quisquam reprehenderit quis,
+            mollitia nisi labore aliquid saepe animi expedita reiciendis
+            numquam natus delectus pariatur cum atque? Labore?
           </p>
         </div>
-      </div>
+      </article>
+
     </main>
 
     <footer class="site-footer">
