--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ecommerce - Nosotros</title>
+    <title>Ecommerce - Galeria</title>
     <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,37 +23,78 @@
     <div class="contenedor-navegacion">
       <nav class="nav-principal contenedor">
         <a href="index.html">Inicio</a>
-        <a class="active" href="nosotros.html">Nosotros</a>
+        <a href="nosotros.html">Nosotros</a>
         <a href="tienda.html">Tienda</a>
         <a href="blog.html">Blog</a>
-        <a href="galeria.html">Galeria</a>
+        <a class="active" href="galeria.html">Galeria</a>
         <a href="contacto.html">Contacto</a>
       </nav>
     </div>
-    >
+>
+
+  
+
+ 
 
     <main class="contenido-principal contenedor">
-      <h2 class="text-center">Sobre Nosotros</h2>
+      <h2 class="text-center">Galeria</h2>
+     
+        <ul class="galeria">
+          <li>
+            <a href="Img/galeria_01.jpg">
+              <img src="Img/galeria_01.jpg" alt="imagen galeria">
+            </a>
+          </li>
 
-      <div class="contenido-nosotros">
-        <div class="imagen">
-          <img src="Img/nosotros.jpg" alt="imagen nosotros" />
-        </div>
-        <div class="informacion-nosotros">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
-            fuga quas ea laboriosam delectus expedita repellendus vitae minus
-            amet nostrum corporis id labore modi tenetur fugit architecto eum
-            repellat ad.
-          </p>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad eos
-            obcaecati culpa. Nostrum quos eveniet aut voluptate natus a.
-            Voluptates consequatur, omnis reiciendis in distinctio consequuntur
-            delectus aperiam error nesciunt.
-          </p>
-        </div>
-      </div>
+          <li>
+            <a href="Img/galeria_02.jpg">
+              <img src="Img/galeria_02.jpg" alt="imagen galeria">
+            </a>
+          </li>
+
+          <li>
+            <a href="Img/galeria_03.jpg">
+              <img src="Img/galeria_03.jpg" alt="imagen galeria">
+            </a>
+          </li>
+
+          <li>
+            <a href="Img/galeria_04.jpg">
+              <img src="Img/galeria_04.jpg" alt="imagen galeria">
+            </a>
+          </li>
+
+          <li>
+            <a href="Img/galeria_05.jpg">
+              <img src="Img/galeria_05.jpg" alt="imagen galeria">
+            </a>
+          </li>
+
+          <li>
+            <a href="Img/galeria_06.jpg">
+              <img src="Img/galeria_06.jpg" alt="imagen galeria">
+            </a>
+          </li>
+
+          <li>
+            <a href="Img/galeria_07.jpg">
+              <img src="Img/galeria_07.jpg" alt="imagen galeria">
+            </a>
+          </li>
+
+          <li>
+            <a href="Img/galeria_08.jpg">
+              <img src="Img/galeria_08.jpg" alt="imagen galeria">
+            </a>
+          </li>
+
+          <li>
+            <a href="Img/galeria_09.jpg">
+              <img src="Img/galeria_09.jpg" alt="imagen galeria">
+            </a>
+          </li>
+
+        </ul>
     </main>
 
     <footer class="site-footer">
