Agregando Medias Queries, responsive web design

--- a/entrada.html
+++ b/entrada.html
@@ -45,6 +45,9 @@
         <div class="image">
           <img src="Img/nosotros.jpg" alt="imagen blog" />
         </div>
+        <div class="contenido-blog">
+
+      
         <div class="entrada-meta">
           <p>Fecha: <span>22 de Octubre de 2023</span></p>
           <p>Escrito por : <span>luis celi</span></p>
@@ -83,6 +86,7 @@
             numquam natus delectus pariatur cum atque? Labore?
           </p>
         </div>
+      </div>
       </article>
 
     </main>
